Zapis nr 2, HTML

--- a/index.html
+++ b/index.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
+    <title>PAI, laboratorium 1</title>
 </head>
 <body>
+    <header>
+        <h1>Podstawy aplikacji internetowych</h1>
+
+        <h3>Lab.1: System kontroli wersji i przypomnienie HTML5/CSS</h3>
+
+        <article>
+            <h4>Przykładowa zawartość w trzech sekcjach</h4>
+            <section id="sec1">
+            <h4 class="SEC_HEADER">Praca z lokalnym repozytorium git</h4>
+            <ul>
+                <span><li>Zainiciuj repozytorium</li></span>
+                <span><li>Wpisz lokalnie nazwę <em> user.name </em>i e-mail <em>user.email</em></li></span>
+                <span><li>Dodaj katalogi, pliki, wpisz zawartość i zapisz zmiany</li></span>
+                <span><li>Przejdź do panelu <em>Source Control</em></li></span>
+                <span><li> Ustaw zmodyfikownaym plikom stan <em>Staged</em></li></span>
+                <span><li> Wprowadź opis do pola tekstowego <em>Message</em>
+                </li></span>
+                <span><li> Zatwierdź zmiany lokalnie za pomocą <em>commit</em></li></span>
+            </ul>
+        </section>
+
+            <section id="sec2">
+            <h4 class="SEC_HEADER">Przykładowy wygenerowany tekst</h4>
+            <p>Paragraf tekstu został wygenerowany narzędziem emmet(instrukcja Lorem100[TAB])<br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus facere quas voluptatibus, blanditiis adipisci est asperiores ad atque dolorem sequi molestiae, nemo iusto quis sint eius. Reiciendis omnis voluptates non quis consequuntur placeat consequatur reprehenderit commodi porro similique facilis a officiis tenetur voluptatum nostrum fugiat enim illum, magni, quo qui dicta deserunt. Corrupti recusandae numquam voluptatem distinctio quae quo reiciendis voluptate eveniet at voluptates aut, eaque, ut nihil beatae optio facere deserunt ratione maiores cumque minus impedit nam laborum ullam molestiae? Voluptatibus adipisci maxime, dignissimos itaque sint vero quo illo aperiam ea distinctio nostrum, ab rerum odio obcaecati corporis officiis.</p>
+        </section>
+
+            <section id="sec3">
+                <h4 
+                class="SEC_HEADER">Linki do stron uczelni
+
+                </h4>
+                <a target="_blank" href="https://www.pk.edu.pl">Politechnika Krakowska im.Tadeusza Kościuszki</a> <br>
+                <a target="_blank" href="https://www.uj.edu.pl">Uniwersytet Jagieloński</a> <br>
+                <a target="_blank" href="https://www.agh.edu.pl">Akademia Górniczo-Hutnicza im. Stanisława Staszica w Krakowie</a>
+            </section>
+        </article>
+         
+    </header>
+
+    <footer>
+    <p>
+        <img class="IMAGE_F" src="img/b1.png" alt="obrazek">
+        <img class="IMAGE_F" src="img/b2.png" alt="obrazek">
+        <img class="IMAGE_F" src="img/b3.png" alt="obrazek">
+    </p>
+    </footer>
     
 </body>
 </html>
