Zapis nr 3, CSS

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <h4 class="SEC_HEADER">Praca z lokalnym repozytorium git</h4>
             <ul>
                 <span><li>Zainiciuj repozytorium</li></span>
-                <span><li>Wpisz lokalnie nazwę <em> user.name </em>i e-mail <em>user.email</em></li></span>
+                <span><li>Wpisz lokalnie nazwę <em>user.name</em> i e-mail <em>user.email</em> </li></span>
                 <span><li>Dodaj katalogi, pliki, wpisz zawartość i zapisz zmiany</li></span>
-                <span><li>Przejdź do panelu <em>Source Control</em></li></span>
+                <span><li>Przejdź do panelu<em>Source Control</em> </li></span>
                 <span><li> Ustaw zmodyfikownaym plikom stan <em>Staged</em></li></span>
-                <span><li> Wprowadź opis do pola tekstowego <em>Message</em>
+                <span><li> Wprowadź opis do pola tekstowego<em>Message</em>
                 </li></span>
                 <span><li> Zatwierdź zmiany lokalnie za pomocą <em>commit</em></li></span>
             </ul>
@@ -34,10 +34,7 @@
         </section>
 
             <section id="sec3">
-                <h4 
-                class="SEC_HEADER">Linki do stron uczelni
-
-                </h4>
+                <h4 class="SEC_HEADER">Linki do stron uczelni</h4>
                 <a target="_blank" href="https://www.pk.edu.pl">Politechnika Krakowska im.Tadeusza Kościuszki</a> <br>
                 <a target="_blank" href="https://www.uj.edu.pl">Uniwersytet Jagieloński</a> <br>
                 <a target="_blank" href="https://www.agh.edu.pl">Akademia Górniczo-Hutnicza im. Stanisława Staszica w Krakowie</a>
